RESOLVED FIXED214048
WebContent process sometimes kills itself because it is receiving too much IPC from the UIProcess
https://bugs.webkit.org/show_bug.cgi?id=214048
Summary WebContent process sometimes kills itself because it is receiving too much IP...
Chris Dumez
Reported 2020-07-07 09:25:34 PDT
WebContent process sometimes kills itself because it is receiving too much IPC from the UIProcess.
Attachments
Patch (4.85 KB, patch)
2020-07-07 09:31 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-07-07 09:25:46 PDT
Chris Dumez
Comment 2 2020-07-07 09:31:14 PDT
EWS
Comment 3 2020-07-07 11:44:04 PDT
Committed r264032: <https://trac.webkit.org/changeset/264032> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403699 [details].
Note You need to log in before you can comment on or make changes to this bug.